--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.0.1
+appmode==0.8.0
 argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
 async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
 attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
