--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,68 @@
-#anyio==3.0.1
+anyio==3.0.1
 appmode==0.8.0
-#3argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
-#async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-#attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-#backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-#bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-#certifi==2020.12.5
-#cffi @ file:///C:/ci/cffi_1613247279197/work
-#colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-#cycler==0.10.0
-#decorator @ file:///tmp/build/80754af9/decorator_1617916966915/work
-#defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-#entrypoints==0.3
-#idna==3.1
-#importlib-metadata @ file:///C:/ci/importlib-metadata_1617877484576/work
-ipykernel
+3argon2-cffi 
+async-generator
+attrs 
+backcall
+bleach
+certifi==2020.12.5
+cffi
+colorama
+cycler==0.10.0
+decorator
+defusedxml
+entrypoints==0.3
+idna==3.1
+importlib-metadata 
+ipykernel 
 ipython
-ipython-genutils 
+ipython-genutils
 ipywidgets==7.6.3
-#jedi==0.17.0
-#Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
-#jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-#jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-#jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-#jupyter-server==1.7.0
-#jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-#jupyterlab-widgets==1.0.0
-#kiwisolver==1.3.1
-#MarkupSafe==1.1.1
+jedi==0.17.0
+Jinja2
+jsonschema
+jupyter-client
+jupyter-core
+jupyter-server==1.7.0
+jupyterlab-pygments
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+MarkupSafe==1.1.1
 matplotlib==3.4.2
-#mistune==0.8.4
-#nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-#nbconvert @ file:///C:/ci/nbconvert_1601914925608/work
-#nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-#nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-#notebook @ file:///C:/ci/notebook_1616443715883/work
+mistune==0.8.4
+nbclient 
+nbconvert 
+nbformat 
+nest-asyncio
+notebook
 numpy==1.20.3
 opencv-python==4.5.2.52
-#packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-#pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-#parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-#pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+packaging
+pandocfilters 
+parso 
+pickleshare
 Pillow==8.2.0
-#prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-#prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-#pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-#Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-#pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-#pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-#python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+prometheus-client 
+prompt-toolkit 
+pycparser 
+Pygments 
+pyparsing
+pyrsistent
+python-dateutil
 #pywin32==227
-#pywinpty==0.5.7
-#pyzmq==20.0.0
-#Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-#six @ file:///C:/ci/six_1605187374963/work
-#sniffio==1.2.0
+pywinpty==0.5.7
+pyzmq==20.0.0
+Send2Trash
+six
+sniffio==1.2.0
 #terminado==0.9.4
-#testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-#tornado @ file:///C:/ci/tornado_1606942392901/work
-#traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-#voila==0.2.10
-#wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-#webencodings==0.5.1
-#websocket-client==0.59.0
-#widgetsnbextension==3.5.1
-#wincertstore==0.2
-#zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
+testpath
+tornado
+traitlets
+voila==0.2.10
+wcwidth
+webencodings==0.5.1
+websocket-client==0.59.0
+widgetsnbextension==3.5.1
+wincertstore==0.2
+zipp 
